samples/_failures_safe/1761083901_ba333f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9510a17b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9510a17b.c:159:23: error: expected ‘;’ at end of input
  159 |                 tokens
      |                       ^
      |                       ;
./samples/SAFE/__tmp_9510a17b.c:159:17: error: expected declaration or statement at end of input
  159 |                 tokens
      |                 ^~~~~~
./samples/SAFE/__tmp_9510a17b.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9510a17b.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9510a17b.c:159:17: error: expected declaration or statement at end of input
